@@ -2,7 +2,7 @@
 # Kernel/Output/HTML/Layout.pm - provides generic HTML output
 # Copyright (C) 2001-2009 OTRS AG, http://otrs.org/
 # --
-# $Id: Layout.pm,v 1.176.2.9 2009-12-08 17:13:32 mn Exp $
+# $Id: Layout.pm,v 1.176.2.10 2009-12-09 08:39:22 mg Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -20,7 +20,7 @@ use Kernel::Language;
 use Kernel::System::HTMLUtils;
 
 use vars qw(@ISA $VERSION);
-$VERSION = qw($Revision: 1.176.2.9 $) [1];
+$VERSION = qw($Revision: 1.176.2.10 $) [1];
 
 =head1 NAME
 
@@ -3215,7 +3215,7 @@ generates a page nav bar
         PageShown   => 15,          # number of shown items a page
         AllHits     => 56,          # number of total hits
         Action      => 'AgentXXX',  # e. g. 'Action=' . $Self->{LayoutObject}->{Action}
-        Link        => $Link,       # e. g. 'Subaction=View'
+        Link        => $Link,       # e. g. 'Subaction=View&'
         AJAXReplace => 'IDElement', # IDElement which should be replaced
     );
 
@@ -3257,7 +3257,9 @@ sub PageNavBar {
     my $WindowStart = sprintf( "%.0f", ( $Param{StartHit} / $Param{PageShown} ) );
     $WindowStart = int( ( $WindowStart / $WindowSize ) ) + 1;
     $WindowStart = ( $WindowStart * $WindowSize ) - ($WindowSize);
-    my $Baselink = "$Self->{Baselink}$Param{Action}&$Param{Link}";
+    my $Action = $Param{Action} || '';
+    my $Link   = $Param{Link}   || '';
+    my $Baselink = "$Self->{Baselink}$Action&$Link";
     my $i        = 0;
     while ( $i <= ( $Pages - 1 ) ) {
         $i++;
@@ -4394,6 +4396,6 @@ did not receive this file, see http://www.gnu.org/licenses/agpl.txt.
 
 =head1 VERSION
 
-$Revision: 1.176.2.9 $ $Date: 2009-12-08 17:13:32 $
+$Revision: 1.176.2.10 $ $Date: 2009-12-09 08:39:22 $
 
 =cut
