@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2009 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.993.2.70 2009-12-08 17:13:32 mn Exp $
+# $Id: CHANGES,v 1.993.2.71 2009-12-09 08:39:22 mg Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -10,6 +10,8 @@
 # --
 
 2.4.6 (2009/??/??)
+ - (2009/12/09) Fixed bug#4363 - Layout.pm -> PageNavBar() mistakes because of
+    missing checks and descriptions
  - (2009/12/08) Fixed bug#4361 - Umlauts in Dashboard are not displayed correcty
     after refresh on non-unicode databases.
  - (2009/12/08) Fixed bug# 4323 - Customer Interface shows last customer article
